<resources>
    <string name="app_name">BOSLive</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="action_register_in_short">Register</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_parents">Parents</string>
    <string name="title_badges">Badges</string>
    <string name="title_questionnaire">Questionnaire</string>
    <string name="badge_names"></string>
    <string name="view_your_badges">View Your Badges</string>
    <string name="channel_name">BOSLive Channel</string>
    <string name="channel_description">send notifications to help youth</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">HELLO WORLD</string>
    <string name="questionnaire_intro">Please take some time out of your day to answer a 10 second questionnaire!</string>
    <string name="parent_first_name">Parent First Name</string>
    <string name="parent_last_name">Parent Last Name</string>
    <string name="parent_occupation">Occupation</string>
    <string name="parent_night_start">Normal night shift start time</string>
    <string name="parent_day_start">Normal day shift start time</string>
    <string name="parent_shift_length">Length (AVG)</string>
    <string name="button_submit">Submit</string>
    <string name="button_insert_shift">Insert a Shift</string>
    <string name="parent_list">Please Select one of your parents</string>

    <string name="shift_date">Enter the Shift date</string>
    <string name="shift_start">Enter the Start of the shift</string>
    <string name="shift_end">Enter the end of the shift</string>
</resources>
